--- a/app/views/food_intake_logs/index.html.erb
+++ b/app/views/food_intake_logs/index.html.erb
@@ -26,4 +26,4 @@
 
 <br />
 
-<%= link_to 'New Food intake log', new_food_intake_log_path %>
+<%= link_to 'New Food intake log', new_food_intake_log_path, class: "button radius" %>
