--- a/app/views/weight_logs/index.html.erb
+++ b/app/views/weight_logs/index.html.erb
@@ -22,4 +22,4 @@
 
 <br />
 
-<%= link_to 'New Weight log', new_weight_log_path %>
+<%= link_to 'New Weight log', new_weight_log_path, class: "button radius" %>
