--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing activity</h1>
-
+<%= link_to 'Show', @activity, class: "button radius"  %> |
+<%= link_to 'Back', activities_path, class: "button radius"  %>
 <%= render 'form' %>
 
-<%= link_to 'Show', @activity %> |
-<%= link_to 'Back', activities_path %>
+
