--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -24,4 +24,4 @@
 
 <br />
 
-<%= link_to 'New Activity', new_activity_path %>
+<%= link_to 'New Activity', new_activity_path, class: "button radius" %>
