--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New activity</h1>
-
+<%= link_to 'Back', activities_path, class: "button radius"  %>
 <%= render 'form' %>
 
-<%= link_to 'Back', activities_path %>
+
+
