--- a/app/views/exercise_logs/_form.html.erb
+++ b/app/views/exercise_logs/_form.html.erb
@@ -1,27 +1,39 @@
 <%= form_for(@exercise_log) do |f| %>
-  <% if @exercise_log.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@exercise_log.errors.count, "error") %> prohibited this exercise_log from being saved:</h2>
+    <% if @exercise_log.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@exercise_log.errors.count, "error") %> prohibited this exercise_log from being saved:</h2>
 
-      <ul>
-      <% @exercise_log.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+          <ul>
+            <% @exercise_log.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+
+    <div class="row collapse">
+      <div class="small-3 columns">
+        <%= f.label :length_in_minutes, class: "right inline", title: "Type of activity", data: {tooltip: true} %>
+      </div>
+      <div class="small-9 columns">
+        <%= f.number_field :length %>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :length_in_minutes %><br />
-    <%= f.number_field :length %>
-  </div>
-  <div class="field">
-    <%= f.hidden_field :user_id, :value => current_user.id %>
-  </div>
-  <div class="field">
-    <%= collection_select(:exercise_log, :activity_id, Activity.all, :id, :name) %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div>
+      <%= f.hidden_field :user_id, :value => current_user.id %>
+    </div>
+    <div class="row collapse">
+      <div class="small-3 columns">
+        <%= f.label :activity_type, class: "right inline" %>
+      </div>
+      <div class="small-9 columns">
+        <%= collection_select(:exercise_log, :activity_id, Activity.all, :id, :name) %>
+      </div>
+    </div>
+    <div class="row collapse">
+      <div class="small-9 small-offset-3 columns">
+        <%= f.submit %>
+      </div>
+    </div>
 <% end %>
