--- a/app/views/exercise_logs/new.html.erb
+++ b/app/views/exercise_logs/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New exercise_log</h1>
-
+<h1>New exercise log</h1>
+<%= link_to 'Back', exercise_logs_path, class: "button radius"  %>
 <%= render 'form' %>
 
-<%= link_to 'Back', exercise_logs_path %>
