--- a/app/views/food_intake_logs/new.html.erb
+++ b/app/views/food_intake_logs/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New food intake log</h1>
-
+<%= link_to 'Back', food_intake_logs_path, class: "button radius"  %>
 <%= render 'form' %>
 
-<%= link_to 'Back', food_intake_logs_path %>
+
