--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,5 +1,3 @@
 <h1>New food</h1>
-
+<%= link_to 'Back', foods_path, class: "button radius"  %>
 <%= render 'form' %>
-
-<%= link_to 'Back', foods_path %>
