--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
-<html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7 ]>
+<html class="ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]>
+<html class="ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]>
+<html class="ie8" lang="en"> <![endif]-->
+<!--[if IE 9 ]>
+<html class="ie9" lang="en"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!-->
+<html lang="en"> <!--<![endif]-->
 <head>
-  <title>DietApp</title>
-  <%= stylesheet_link_tag "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <meta charset="utf-8"/>
+
+  <!-- Uncomment to make IE8 render like IE7 -->
+  <!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
+
+  <!-- Set the viewport width to device width for mobile -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+  <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+
+  <%= stylesheet_link_tag "application" %>
+  <%= javascript_include_tag "vendor/custom.modernizr" %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
-<div id='header'>
-  <!-- Header Image Displayes here --> </div>
-<div id='menu'>
-  <div id="navbar">
-    <ul>
+<nav class="top-bar ">
+  <div>
+  <ul class="title-area">
+    <li class="name">
+      <h1><%= link_to "Diet Planner", root_path %></h1>
+    </li>
+  </ul>
+  <section class="top-bar-section">
+    <ul class="right">
       <li><a href="/home">Home</a></li>
       <li><a href="/about">About us</a></li>
       <li><a href="/contact">Contact us</a></li>
@@ -21,24 +45,14 @@
       <li><%= link_to 'Login', new_user_session_path %></li>
       <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
     </ul>
+    </section>
   </div>
-</div>
-<div id='container'>
-  <div id='content'>
-    <p class="notice"><%= notice %></p>
+</nav>
+<div class="large-9 small-centered columns">
 
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
-    <% if user_signed_in? %>
-        <div>Signed in as... <%= current_user.email %>
-          (<%= link_to 'Sign out', destroy_user_session_path, :method => :delete
-        %>)
-        </div>
-    <% else %>
-        <%= link_to 'Register', new_user_registration_path %> or <%= link_to 'Sign in', new_user_session_path %>
-    <% end %>
-
-  </div>
+  <%= yield %>
 </div>
+
+<%= javascript_include_tag "application" %>
 </body>
 </html>
