--- a/app/views/weight_logs/new.html.erb
+++ b/app/views/weight_logs/new.html.erb
@@ -1,5 +1,3 @@
 <h1>Log new weight</h1>
-
+<%= link_to 'Back', weight_logs_path, class: "button radius"  %>
 <%= render 'form' %>
-
-<%= link_to 'Back', weight_logs_path %>
