--- a/app/views/food_intake_logs/index.html.erb
+++ b/app/views/food_intake_logs/index.html.erb
@@ -17,7 +17,7 @@
     <td><%= food_intake_log.intake_time %></td>
     <td><%= food_intake_log.food.name %></td>
     <td><%= food_intake_log.amount %></td>
-    <td><%= link_to 'Show', food_intake_log %></td>
+    <td><%= link_to 'Nutritional value', food_intake_log %></td>
     <td><%= link_to 'Edit', edit_food_intake_log_path(food_intake_log) %></td>
     <td><%= link_to 'Destroy', food_intake_log, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
