--- a/app/views/food_intake_logs/show.html.erb
+++ b/app/views/food_intake_logs/show.html.erb
@@ -1,24 +1,63 @@
+<h1>Nutritional value</h1>
 <p id="notice"><%= notice %></p>
+ <table>
+<tr>
+  <td class="bold">Intake date:</td>
+  <td><%= @food_intake_log.intake_date %></td>
+</tr>
 
-<p>
-  <b>Intake date:</b>
-  <%= @food_intake_log.intake_date %>
-</p>
+<tr>
+  <td class="bold">Intake time:</td>
+  <td><%= @food_intake_log.intake_time %></td>
+</tr>
 
-<p>
-  <b>Intake time:</b>
-  <%= @food_intake_log.intake_time %>
-</p>
+<tr>
+  <td class="bold">Food:</td>
+  <td><%= @food_intake_log.food.name %></td>
+</tr>
 
-<p>
-  <b>Food:</b>
-  <%= @food_intake_log.food %>
-</p>
+<tr>
+  <td class="bold">Amount:</td>
+  <td><%= @food_intake_log.amount %></td>
+</tr>
+<tr>
+  <td class="bold">Calories:</td>
+  <td><%= @food_intake_log.calories %></td>
+</tr>
 
-<p>
-  <b>Amount:</b>
-  <%= @food_intake_log.amount %>
-</p>
+<tr>
+  <td class="bold">Carbs:</td>
+  <td><%= @food_intake_log.carbohydrates %></td>
+</tr>
 
+<tr>
+  <td class="bold">Cholesterol:</td>
+  <td><%= @food_intake_log.cholesterol %></td>
+</tr>
+<tr>
+  <td class="bold">Fibre:</td>
+  <td><%= @food_intake_log.fibre %></td>
+</tr>
+
+<tr>
+  <td class="bold">Protein:</td>
+  <td><%= @food_intake_log.protein %></td>
+</tr>
+
+<tr>
+  <td class="bold">Saturated fats:</td>
+  <td><%= @food_intake_log.saturated_fats %></td>
+</tr>
+
+<tr>
+  <td class="bold">Unsaturated fats:</td>
+  <td><%= @food_intake_log.unsaturated_fats %></td>
+</tr>
+
+<tr>
+  <td class="bold">Sugars:</td>
+  <td><%= @food_intake_log.sugars %></td>
+</tr>
+ </table>
 <%= link_to 'Edit', edit_food_intake_log_path(@food_intake_log) %> |
 <%= link_to 'Back', food_intake_logs_path %>
