--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -82,6 +82,27 @@
         <%= f.text_field :fibre %>
       </div>
     </div>
+
+    <div class="row collapse">
+      <div class="small-3 columns">
+        <%= f.label :category, class: "right inline" %>
+      </div>
+      <div class="small-9 columns">
+        <%= collection_select(:food, :food_category_id, FoodCategory.all, :id, :name) %>
+      </div>
+    </div>
+
+
+    <div class="row collapse">
+      <div class="small-3 columns">
+        <%= f.label :activity_type, class: "right inline" %>
+      </div>
+      <div class="small-9 columns">
+        <%= collection_select(:exercise_log, :activity_id, Activity.all, :id, :name) %>
+      </div>
+    </div>
+
+
     <div class="row collapse">
       <div class="small-9 small-offset-3 columns">
         <%= f.submit %>
