Added date to exercise logs and JQuery datepicket to exercise logs and food intake logs

--- a/app/views/exercise_logs/show.html.erb
+++ b/app/views/exercise_logs/show.html.erb
@@ -1,5 +1,11 @@
 <p id="notice"><%= notice %></p>
 
+
+<p>
+  <b>Date:</b>
+  <%= @exercise_log.exercise_date %>
+</p>
+
 <p>
   <b>Length:</b>
   <%= @exercise_log.length %>
