--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -5,5 +5,5 @@ h1 {
   margin-top: 1.2em;
 }
 
-div.date select { display: inline; }
+div.date input { width: auto; }
 table td.bold { font-weight: bold;}
