--- a/app/views/exercise_logs/_form.html.erb
+++ b/app/views/exercise_logs/_form.html.erb
@@ -11,7 +11,16 @@
         </div>
     <% end %>
 
-
+    <div class="row collapse">
+      <div class="small-3 columns">
+        <%= f.label :exercise_date, class: "right inline", title: "Date of the meal", data: {tooltip: true} %>
+      </div>
+      <div class="small-9 columns">
+        <div class="date">
+          <%= f.text_field :exercise_date %>
+        </div>
+      </div>
+    </div>
     <div class="row collapse">
       <div class="small-3 columns">
         <%= f.label :length_in_minutes, class: "right inline", title: "Type of activity", data: {tooltip: true} %>
