--- a/app/views/exercise_logs/index.html.erb
+++ b/app/views/exercise_logs/index.html.erb
@@ -2,7 +2,7 @@
 
 <table>
   <tr>
-    <th>Length</th>
+    <th>Date</th>
     <th>Calories burned</th>
     <th>Type of activity</th>
     <th>Length in minutes</th>
@@ -13,7 +13,7 @@
 
 <% @exercise_logs.each do |exercise_log| %>
   <tr>
-    <td><%= exercise_log.length %></td>
+    <td><%= exercise_log.exercise_date %></td>
     <td><%= exercise_log.calories_burned %></td>
     <td><%= exercise_log.activity.name %></td>
     <td><%= exercise_log.length %></td>
