--- a/app/views/food_intake_logs/_form.html.erb
+++ b/app/views/food_intake_logs/_form.html.erb
@@ -16,8 +16,10 @@
       <div class="small-3 columns">
         <%= f.label :intake_date, class: "right inline", title: "Date of the meal", data: {tooltip: true} %>
       </div>
-      <div class="small-9 columns date">
-        <%= f.date_select :intake_date %>
+      <div class="small-9 columns">
+        <div class="date">
+        <%= f.text_field :intake_date %>
+        </div>
       </div>
     </div>
     <div class="row collapse">
