Added ingredients and recipes and connected the two using has_and_belongs_to_many relationship

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
       <li><a href="/about">About us</a></li>
       <li><a href="/contact">Contact us</a></li>
       <li><a href="/diet_planner">Diet Planner</a></li>
-      <li><a href="/healthy_recipes">Healthy Recipes</a></li>
+      <li><a href="/recipes">Healthy Recipes</a></li>
       <li><a href="/news">Healthy living News</a></li>
       <li><%= link_to 'Login', new_user_session_path %></li>
       <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
