--- a/app/views/food_categories/new.html.erb
+++ b/app/views/food_categories/new.html.erb
@@ -1,5 +1,3 @@
 <h1>New food category</h1>
-
+<%= link_to 'Back', food_categories_path, class: "button radius"  %>
 <%= render 'form' %>
-
-<%= link_to 'Back', food_categories_path %>
