Added side bar to logged user pages

--- a/app/views/food_categories/index.html.erb
+++ b/app/views/food_categories/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing food_categories</h1>
+<h1>Listing food categories</h1>
 
 <table>
   <tr>
@@ -20,4 +20,4 @@
 
 <br />
 
-<%= link_to 'New Food category', new_food_category_path %>
+<%= link_to 'New Food category', new_food_category_path, class: "button radius" %>
