Added motivational images

--- a/app/views/exercise_logs/edit.html.erb
+++ b/app/views/exercise_logs/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @exercise_log %> |
-<%= link_to 'Back', exercise_logs_path %>
+<%= link_to 'Show', @exercise_log %>, class: "button radius"  %>
+<%= link_to 'Back', exercise_logs_path, class: "button radius"  %>
