--- a/app/views/exercise_logs/show.html.erb
+++ b/app/views/exercise_logs/show.html.erb
@@ -22,5 +22,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_exercise_log_path(@exercise_log) %> |
-<%= link_to 'Back', exercise_logs_path %>
+<%= link_to 'Edit', edit_exercise_log_path(@exercise_log), class: "button radius"  %>
+<%= link_to 'Back', exercise_logs_path, class: "button radius"  %>
