--- a/app/views/food_intake_logs/edit.html.erb
+++ b/app/views/food_intake_logs/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @food_intake_log %> |
-<%= link_to 'Back', food_intake_logs_path %>
+<%= link_to 'Show', @food_intake_log , class: "button radius"  %>
+<%= link_to 'Back', food_intake_logs_path, class: "button radius"  %>
