--- a/app/views/ingredients/edit.html.erb
+++ b/app/views/ingredients/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @ingredient %> |
-<%= link_to 'Back', ingredients_path %>
+<%= link_to 'Show', @ingredient, class: "button radius"  %>
+<%= link_to 'Back', ingredients_path, class: "button radius"  %>
