--- a/app/views/site/_side_bar.html.erb
+++ b/app/views/site/_side_bar.html.erb
@@ -1,5 +1,6 @@
 <ul class="side-nav">
   <li><a href="#">Dashboard</a></li>
+  <li><a href="/motivational_images">Motivational images</a></li>
   <li><a href="#">Progress Stats</a></li>
   <li class="active"><a href="/exercise_logs">Exercise logs</a></li>
   <li><a href="/food_intake_logs">Food Intake logs</a></li>
