--- a/app/views/weight_logs/show.html.erb
+++ b/app/views/weight_logs/show.html.erb
@@ -11,5 +11,5 @@
   <%= @weight_log.measured_on %>
 </p>
 
-<%= link_to 'Edit', edit_weight_log_path(@weight_log) %> |
-<%= link_to 'Back', weight_logs_path %>
+<%= link_to 'Edit', edit_weight_log_path(@weight_log), class: "button radius"  %>
+<%= link_to 'Back', weight_logs_path, class: "button radius"  %>
