--- a/app/views/food_categories/edit.html.erb
+++ b/app/views/food_categories/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @food_category %> |
-<%= link_to 'Back', food_categories_path %>
+<%= link_to 'Show', @food_category , class: "button radius"  %>
+<%= link_to 'Back', food_categories_path , class: "button radius"  %>
