--- a/app/views/food_categories/show.html.erb
+++ b/app/views/food_categories/show.html.erb
@@ -7,5 +7,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_food_category_path(@food_category) %> |
-<%= link_to 'Back', food_categories_path %>
+<%= link_to 'Edit', edit_food_category_path(@food_category), class: "button radius"  %>
+<%= link_to 'Back', food_categories_path, class: "button radius"  %>
