--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -47,5 +47,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_food_path(@food) %> |
-<%= link_to 'Back', foods_path %>
+<%= link_to 'Edit', edit_food_path(@food), class: "button radius"  %>
+<%= link_to 'Back', foods_path, class: "button radius"  %>
