--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
         <% if current_user %>
             <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
         <% else %>
-            <li><%= link_to 'Register',  new_registration_path(resource_name) %></li>
+            <li><%= link_to 'Register',  new_registration_path(:user) %></li>
             <li><%= link_to 'Login', new_user_session_path %></li>
         <% end %>
       </ul>
