--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -37,5 +37,5 @@
   <%= @recipe.directions %>
 </p>
 
-<%= link_to 'Edit', edit_recipe_path(@recipe) %> |
-<%= link_to 'Back', recipes_path %>
+<%= link_to 'Edit', edit_recipe_path(@recipe), class: "button radius"  %>
+<%= link_to 'Back', recipes_path, class: "button radius"  %>
