--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Site#index</h1>
-<p>Find me in app/views/site/index.html.erb</p>
+<div>Healthy weight based on your height through BMI calculation is between <strong id="min"> <%= min_bmi_normal %></strong>  and  <strong id="max"><%= max_bmi_normal %></strong></div>
 <div id="myfirstchart" style="height: 250px;">
-<%= content_tag :div, "", id: "weight_logs_chart", data: {weight_logs: @weight_logs} %>
+<%= content_tag :div, "", id: "weight_logs_chart", data: {weight_logs: @weight_logs, } %>
 </div>
