--- a/app/views/weight_logs/edit.html.erb
+++ b/app/views/weight_logs/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @weight_log %>, class: "button radius"  %>
+<%= link_to 'Show', @weight_log, class: "button radius"  %>
 <%= link_to 'Back', weight_logs_path, class: "button radius"  %>
