--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Register</h1>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <%= devise_error_messages! %>
 
 
     <div class="row collapse">
@@ -18,7 +18,19 @@
         <%= f.label :password, class: "right inline", title: "Enter a password between 8 and 16 characters", data: {tooltip: true} %>
       </div>
       <div class="small-9 columns">
-        <%= f.password_field :password %>
+        <%= f.password_field :password, :data => {:indicator => "pwindicator"} %>
+      </div>
+
+    </div>
+    <div class="row collapse">
+      <div class="small-3 columns">
+        <%= f.label :password_strength, class: "right inline", title: "Password Strength"%>
+      </div>
+      <div class="small-9 columns">
+        <div id="pwindicator">
+          <div class="bar"></div>
+          <div class="label"></div>
+        </div>
       </div>
     </div>
 
