Added chosen jquery plugin to the exercise logs

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -24,3 +24,6 @@ div.sidebar {padding-top: 100px;}
 .pw-very-strong, .pw-very-strong .label {
   background-color: #47ff2d;
 }
+.chosen-rtl .chosen-drop {
+  left: -9000px;
+}
