Added Ajax to food categories- updating tables still missing

--- a/app/views/food_categories/index.html.erb
+++ b/app/views/food_categories/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Listing food categories</h1>
-
+<%= link_to 'New Food Category', new_food_category_path, id: "new_link", remote: true, class: "button radius"  %>
+<br />  <br />
 <table>
   <tr>
     <th>Name</th>
@@ -13,11 +14,12 @@
     <td><%= food_category.name %></td>
     <td><%= link_to 'Show', food_category %></td>
     <td><%= link_to 'Edit', edit_food_category_path(food_category) %></td>
-    <td><%= link_to 'Destroy', food_category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Destroy', food_category, method: :delete, data: { confirm: 'Are you sure?', remote: true } %></td>
   </tr>
 <% end %>
+
 </table>
+<div id="new_rec"></div>
 
-<br />
 
-<%= link_to 'New Food category', new_food_category_path, class: "button radius" %>
+
