--- a/app/views/food_categories/_form.html.erb
+++ b/app/views/food_categories/_form.html.erb
@@ -1,21 +1,27 @@
-<%= form_for(@food_category) do |f| %>
-  <% if @food_category.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@food_category.errors.count, "error") %> prohibited this food_category from being saved:</h2>
+<%= form_for(@food_category, remote: true) do |f| %>
+    <% if @food_category.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@food_category.errors.count, "error") %> prohibited this food_category from being
+            saved:</h2>
 
-      <ul>
-      <% @food_category.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+          <ul>
+            <% @food_category.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+    <div class="row collapse">
+      <div class="small-1 columns">
+        <%= f.label :name, class: "right inline", title: "Name of the food category", data: {tooltip: true} %>
+      </div>
+      <div class="small-4 columns">
+        <%= f.text_field :name %>
+      </div>
+      <div class="small-7  columns">
+        <%= f.submit %>
+      </div>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
 <% end %>
