Made the buttons smaller and added sorting of the recipes

--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing activity</h1>
-<%= link_to 'Show', @activity, class: "button radius"  %> |
-<%= link_to 'Back', activities_path, class: "button radius"  %>
+<%= link_to 'Show', @activity, class: "small button radius"  %> |
+<%= link_to 'Back', activities_path, class: "small button radius"  %>
 <%= render 'form' %>
 
 
