--- a/app/views/food_categories/index.html.erb
+++ b/app/views/food_categories/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Listing food categories</h1>
-<%= link_to 'New Food Category', new_food_category_path, id: "new_link", remote: true, class: "button radius"  %>
+<%= link_to 'New Food Category', new_food_category_path, id: "new_link", remote: true, class: "small button radius"  %>
 <br />  <br />
 <table>
   <tr>
