--- a/app/views/food_intake_logs/edit.html.erb
+++ b/app/views/food_intake_logs/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing food intake log</h1>
-
+<%= link_to 'Back', food_intake_logs_path, class: "small button radius"  %>
 <%= render 'form' %>
 
-<%= link_to 'Show', @food_intake_log , class: "button radius"  %>
-<%= link_to 'Back', food_intake_logs_path, class: "button radius"  %>
+<%= link_to 'Show', @food_intake_log , class: "small button radius"  %>
+
