--- a/app/views/foods/edit.html.erb
+++ b/app/views/foods/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @food , class: "button radius"  %>
-<%= link_to 'Back', foods_path, class: "button radius"  %>
+<%= link_to 'Show', @food , class: "small button radius"  %>
+<%= link_to 'Back', foods_path, class: "small button radius"  %>
