--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -38,4 +38,4 @@
 
 <br />
 
-<%= link_to 'New Food', new_food_path, class: "button radius" %>
+<%= link_to 'New Food', new_food_path, class: "small button radius" %>
