--- a/app/views/ingredients/edit.html.erb
+++ b/app/views/ingredients/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing ingredient</h1>
+<%= link_to 'Back', ingredients_path, class: "small button radius"  %>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @ingredient, class: "button radius"  %>
-<%= link_to 'Back', ingredients_path, class: "button radius"  %>
+<%= link_to 'Show', @ingredient, class: "small button radius"  %>
