--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -20,4 +20,4 @@
 
 <br />
 
-<%= link_to 'New Ingredient', new_ingredient_path, class: "button radius" %>
+<%= link_to 'New Ingredient', new_ingredient_path, class: "small button radius" %>
