--- a/app/views/motivational_images/index.html.erb
+++ b/app/views/motivational_images/index.html.erb
@@ -17,4 +17,4 @@
 
 <br/>
 
-<%= link_to 'Add an image', new_motivational_image_path, class: "button radius" %>
+<%= link_to 'Add an image', new_motivational_image_path, class: "small button radius" %>
