--- a/app/views/motivational_images/show.html.erb
+++ b/app/views/motivational_images/show.html.erb
@@ -9,5 +9,5 @@
   <%= @motivational_image.caption %>
 </p>
 
-<%= link_to 'Edit', edit_motivational_image_path(@motivational_image), class: "button radius"  %>
-<%= link_to 'Back', motivational_images_path, class: "button radius"  %>
+<%= link_to 'Edit', edit_motivational_image_path(@motivational_image), class: "small button radius"  %>
+<%= link_to 'Back', motivational_images_path, class: "small button radius"  %>
