--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Editing profile</h1>
+<%= link_to 'Back', profiles_path, class: "small button radius"  %>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @profile, class: "button radius"  %>
-<%= link_to 'Back', profiles_path, class: "button radius"  %>
+<%= link_to 'Show', @profile, class: "small button radius"  %>
+
