--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing recipe</h1>
-
+<%= link_to 'Show', @recipe, class: "small button radius"  %>
+<%= link_to 'Back', recipes_path, class: "small button radius"  %>
 <%= render 'form' %>
 
-<%= link_to 'Show', @recipe, class: "button radius"  %>
-<%= link_to 'Back', recipes_path, class: "button radius"  %>
+
