--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,3 +1,3 @@
 <h1>New activity</h1>
-<%= link_to 'Back', activities_path, class: "button radius"  %>
+<%= link_to 'Back', activities_path, class: "small button radius"  %>
 <%= render 'form' %>
