--- a/app/views/exercise_logs/edit.html.erb
+++ b/app/views/exercise_logs/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing exercise log</h1>
-
+<%= link_to 'Back', exercise_logs_path, class: "small button radius"  %>
 <%= render 'form' %>
 
-<%= link_to 'Show', @exercise_log %>, class: "button radius"  %>
-<%= link_to 'Back', exercise_logs_path, class: "button radius"  %>
+<%= link_to 'Show', @exercise_log, class: "small button radius"  %>
+
