--- a/app/views/exercise_logs/index.html.erb
+++ b/app/views/exercise_logs/index.html.erb
@@ -26,4 +26,4 @@
 
 <br />
 
-<%= link_to 'New Exercise log', new_exercise_log_path, class: "button radius" %>
+<%= link_to 'New Exercise log', new_exercise_log_path, class: "small button radius" %>
