--- a/app/views/exercise_logs/new.html.erb
+++ b/app/views/exercise_logs/new.html.erb
@@ -1,3 +1,3 @@
 <h1>New exercise log</h1>
-<%= link_to 'Back', exercise_logs_path, class: "button radius"  %>
+<%= link_to 'Back', exercise_logs_path, class: "small button radius"  %>
 <%= render 'form' %>
