--- a/app/views/exercise_logs/show.html.erb
+++ b/app/views/exercise_logs/show.html.erb
@@ -1,5 +1,6 @@
 <h1>Exercise log</h1>
 <p id="notice"><%= notice %></p>
+<%= link_to 'Back', exercise_logs_path, class: "small button radius" %>
 
 <p>
   <b>Date:</b>
@@ -22,5 +23,4 @@
 </p>
 
 
-<%= link_to 'Edit', edit_exercise_log_path(@exercise_log), class: "button radius"  %>
-<%= link_to 'Back', exercise_logs_path, class: "button radius"  %>
+<%= link_to 'Edit', edit_exercise_log_path(@exercise_log), class: "small button radius" %>
