--- a/app/views/food_categories/new.html.erb
+++ b/app/views/food_categories/new.html.erb
@@ -1,3 +1,3 @@
 <h1>New food category</h1>
-<%= link_to 'Back', food_categories_path, class: "button radius"  %>
+<%= link_to 'Back', food_categories_path, class: "small button radius"  %>
 <%= render 'form' %>
