--- a/app/views/food_categories/show.html.erb
+++ b/app/views/food_categories/show.html.erb
@@ -1,11 +1,11 @@
 <h1>Food Category</h1>
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'Back', food_categories_path, class: "small button radius"  %>
 <p>
   <b>Name:</b>
   <%= @food_category.name %>
 </p>
 
 
-<%= link_to 'Edit', edit_food_category_path(@food_category), class: "button radius"  %>
-<%= link_to 'Back', food_categories_path, class: "button radius"  %>
+<%= link_to 'Edit', edit_food_category_path(@food_category), class: "small button radius"  %>
+
