--- a/app/views/food_intake_logs/show.html.erb
+++ b/app/views/food_intake_logs/show.html.erb
@@ -59,5 +59,5 @@
   <td><%= @food_intake_log.sugars %></td>
 </tr>
  </table>
-<%= link_to 'Edit', edit_food_intake_log_path(@food_intake_log), class: "button radius"  %>|
-<%= link_to 'Back', food_intake_logs_path, class: "button radius"  %>
+<%= link_to 'Edit', edit_food_intake_log_path(@food_intake_log), class: "small button radius"  %>|
+<%= link_to 'Back', food_intake_logs_path, class: "small button radius"  %>
