--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -1,3 +1,3 @@
 <h1>New ingredient</h1>
-<%= link_to 'Back', ingredients_path, class: "button radius"  %>
+<%= link_to 'Back', ingredients_path, class: "small button radius"  %>
 <%= render 'form' %>
