--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,3 +1,3 @@
 <h1>New recipe</h1>
-<%= link_to 'Back', recipes_path, class: "button radius"  %>
+<%= link_to 'Back', recipes_path, class: "small button radius"  %>
 <%= render 'form' %>
