--- a/app/views/weight_logs/index.html.erb
+++ b/app/views/weight_logs/index.html.erb
@@ -23,4 +23,4 @@
 
 <br />
 
-<%= link_to 'New Weight log', new_weight_log_path, class: "button radius" %>
+<%= link_to 'New Weight log', new_weight_log_path, class: "small button radius" %>
